# ComptonCamera6

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CCMLEM_8hh_source.html  CCReconstruction_8hh_source.html  CCSimulation_8hh_source.html  CMReconstruction_8hh_source.html  CMSimulation_8hh_source.html  CMakeLists.txt  ComptonCone_8hh_source.html  DR__GenerallStructs_8hh_source.html  DetPlane_8hh_source.html  Doxyfile.in  G4Input_8hh_source.html  InputInterfaceSimple_8hh_source.html  InputInterface_8hh_source.html  InputReaderGeant_8hh_source.html  InputReaderSimple_8hh_source.html  InputReader_8hh_source.html  IsectionPoint_8hh_source.html  LinkDef_8hh_source.html  Mask_8hh_source.html  PhysicsBase_8hh_source.html  README.md  SMElement_8hh_source.html  StructLinkDef_8h_source.html  StructLinkDef_8hh_source.html  Structinclude_8hh_source.html  Track_8hh_source.html  annotated.html  cc_2lib_2LinkDef_8h_source.html  clang_format_sources.sh  classCCMLEM-members.html  classCCMLEM.html  classCCReconstruction-members.html  classCCReconstruction.html  classCCSimulation-members.html  classCCSimulation.html  classCMReconstruction-members.html  (+87 more)
.github/workflows/: CI.yml  clang-format-check.yml
Modules/: helpers.cmake
SimulationResults/: CMakeLists.txt  ReadIn.cc  test.root
SimulationResults/include/: StructLinkDef.h  Structinclude.hh
cc/: CMakeLists.txt
cc/lib/: CCMLEM.cc  CCMLEM.hh  CCReconstruction.cc  CCReconstruction.hh  CCSimulation.cc  CCSimulation.hh  CMakeLists.txt  ComptonCone.cc  ComptonCone.hh  LinkDef.h  SMElement.cc  SMElement.hh
cm/lib/: CMReconstruction.cc  CMReconstruction.hh  CMSimulation.cc  CMSimulation.hh  CMakeLists.txt  G4Reconstruction.cc  G4Reconstruction.hh  G4SimulationAdapter.cc  G4SimulationAdapter.hh  LinkDef.h  Mask.cc  Mask.hh
cmake/: check_3rdparty_spdlog.cmake
common/lib/: BinnedGeometry.cc  BinnedGeometry.hh  CLog.cc  CLog.hh  CMakeLists.txt  DR_GenerallStructs.cc  DR_GenerallStructs.hh  DetPlane.cc  DetPlane.hh  G4Input.cc  G4Input.hh  InputReader.cc  InputReader.hh  InputReaderEI.cc  InputReaderEI.hh  InputReaderGeant.cc  InputReaderGeant.hh  InputReaderNN.cc  InputReaderNN.hh  InputReaderPMI.cc  InputReaderPMI.hh  InputReaderPMIDec2021.cc  InputReaderPMIDec2021.hh  InputReaderSimple.cc  InputReaderSimple.hh  IsectionPoint.cc  IsectionPoint.hh  LinkDef.h  Source.cc  Source.hh  Track.cc  Track.hh
common/lib/Sources/: LineSource.cc  LineSource.hh  MultiPointSource.cc  MultiPointSource.hh  PlanarSource.cc  PlanarSource.hh  PointSource.cc  PointSource.hh
data/: config.txt  reco_steps.txt
data/masks/: hMURA1d_101.root  hMURA1d_11.root  hMURA1d_19.root  hMURA1d_23.root  hMURA1d_31.root  hMURA1d_41.root  hMURA1d_43.root  hMURA1d_61.root  hMURA1d_7.root  hMURA1d_71.root  hMURA1d_73.root  hMURA1d_79.root  hMURA1d_83.root  hMURA2d_11.root  hMURA2d_19.root  hMURA2d_31.root  hMURA2d_37.root  hMURA2d_41.root  hMURA2d_47.root  hMURA2d_53.root  hMURA2d_59.root  hMURA2d_61.root  hMURA2d_7.root  hMURA2d_71.root  hMURA2d_73.root  hMURA2d_83.root  hMURA2d_89.root  hMURA2d_97.root
data/mlem_reco/: EnergyResolutionExample.root  config.txt  reco_steps.txt
data/sources/: Circle.mac  Line.mac  Multipoint.mac  Planar.mac  SinglePoint.mac
macros/: DrawData.C  ReadGeometry.C  data.C  generateMura.C  profile.sh.in  rootlogon.C  test.C
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  variables_0.js
sources/: CCMLEM.cc  CMakeLists.txt  Doxyfile.in  LinkDef.hh  camera.cc  cmreco.cc  makeRootDict.cmake  mask.cc  mlem.cc  reconstruction.cc  tests.cc
sources/include/: CCMLEM.hh  CCReconstruction.hh  CCSimulation.hh  CMReconstruction.hh  CMSimulation.hh  ComptonCone.hh  DetPlane.hh  InputReader.hh  InputReaderGeant.hh  InputReaderSimple.hh  IsectionPoint.hh  Mask.hh  PhysicsBase.hh  SMMLEM.hh  Track.hh
sources/macros/: ReadGeometry.C  generateMura.C
sources/macros/masks/: hMURA1d_13.root  hMURA1d_17.root  hMURA1d_29.root  hMURA1d_37.root  hMURA1d_47.root  hMURA1d_53.root  hMURA1d_59.root  hMURA1d_67.root  hMURA1d_89.root  hMURA1d_97.root  hMURA2d_101.root  hMURA2d_13.root  hMURA2d_17.root  hMURA2d_23.root  hMURA2d_29.root  hMURA2d_43.root  hMURA2d_67.root  hMURA2d_79.root
sources/results/: .gitignore  config.txt
sources/src/: CCMLEM.cc  CCReconstruction.cc  CCSimulation.cc  CMReconstruction.cc  ComptonCone.cc  DetPlane.cc  InputReader.cc  InputReaderGeant.cc  InputReaderSimple.cc  IsectionPoint.cc  Mask.cc  PhysicsBase.cc  SMElement.cc  SMMLEM.cc  Track.cc
tests/: CMakeLists.txt  test_runner.cpp  tests_PhysicsBase.cc  tests_config.h.in
tools/: CMakeLists.txt
tools/lib/: CLog.cc  CLog.hh  CMakeLists.txt  Coordinates.hh  DataStructConvert.cc  DataStructConvert.hh  LinkDef.h  MathTools.cc  MathTools.hh  PhysicsBase.cc  PhysicsBase.hh  Smoothing.cc  Smoothing.hh
tools/tests/: CMakeLists.txt  ScaleGraphAndMove_tests.cpp  SmoothGauss_tests.cpp  SubtractBackground_tests.cpp
